--- a/web/package.json
+++ b/web/package.json
@@ -7,14 +7,17 @@
     "dev": "parcel serve src/index.html --port 3000",
     "build": "parcel build src/index.html --dist-dir dist --public-url ./",
     "build:wasm": "node scripts/build-wasm.js",
-    "build:all": "npm run build:wasm && npm run build",
+    "build:assets": "node scripts/package-assets.js",
+    "build:all": "npm run build:wasm && npm run build:assets && npm run build",
     "preview": "npx serve dist -l 3000",
     "clean": "rm -rf dist .parcel-cache build-wasm"
   },
   "devDependencies": {
+    "archiver": "^7.0.1",
     "parcel": "^2.16.4",
     "parcel-reporter-static-files-copy": "^1.5.3",
-    "serve": "^14.2.0"
+    "serve": "^14.2.0",
+    "yauzl": "^3.2.0"
   },
   "browserslist": [
     "last 2 Chrome versions",
